Fixed bug navbar not collapsing after clicking

--- a/client/src/components/style/Navigation.css
+++ b/client/src/components/style/Navigation.css
@@ -21,14 +21,14 @@
   color: white;
 }
 
-.navbar a {
+#navbar-menu a {
   margin: 0 15px;
   color: #b4bbff;
   font-size: 15px;
   transition: all 100ms ease-in-out;
 }
 
-.navbar a:hover {
+#navbar-menu a:hover {
   color: white;
   transition: all 100ms ease-in-out;
 }
@@ -83,7 +83,7 @@
   gap: 1em;
 }
 
-.navbar .active {
+#navbar-menu .active {
   color: white;
 }
 
@@ -98,6 +98,9 @@
   #navbar-logo,
   .navbar-user {
     padding: 0 3em;
+  }
+  .navbar > button {
+    order: -1;
   }
   .navbar-logo-tabs {
     flex-direction: column;
